# codebase-cartographer

./: .gitignore  CONTRIBUTING.md  HACKATHON.md  LICENSE  README.md  SECURITY.md  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: LOCAL_MCP.md
fixtures/sample_repo/: main.py  unused.py
fixtures/sample_repo/api/: handlers.py
fixtures/sample_repo/auth/: __init__.py  routes.py  service.py
fixtures/sample_repo/models/: user.py
fixtures/sample_repo/utils/: helpers.py
integrations/antigravity/: plugin.json
integrations/antigravity/skills/codebase-cartographer/: SKILL.md
integrations/claude-code/: .mcp.json
integrations/claude-code/.claude-plugin/: plugin.json
integrations/claude-code/skills/codebase-cartographer/: SKILL.md
plugins/codebase-cartographer/: .mcp.json
plugins/codebase-cartographer/.codex-plugin/: plugin.json
plugins/codebase-cartographer/skills/codebase-cartographer/: SKILL.md
src/codebase_cartographer/: __init__.py  cli.py  code_parser.py  config.py  git_analyzer.py  graph.py  issue_detector.py  models.py  server.py  visualizer.py
tests/: conftest.py  test_git.py  test_graph.py  test_issues.py  test_mcp_integration.py  test_parser.py  test_plugin_package.py  test_release_integrations.py  test_server_cli.py  test_visualizer.py
