[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-cartographer"
version = "0.1.0"
description = "MCP server that builds a knowledge graph of any codebase using Tree-sitter AST parsing, git history analysis, and NetworkX graph algorithms. Zero API calls — all local computation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vikhyat Gupta" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
  "mcp",
  "codex",
  "codebase",
  "knowledge-graph",
  "developer-tools",
  "static-analysis",
]
dependencies = [
  "fastmcp>=2.0.0,<4.0.0",
  "networkx>=3.3",
  "tree-sitter>=0.23.0",
  "tree-sitter-python>=0.23.0",
  "tree-sitter-javascript>=0.23.0",
  "tree-sitter-typescript>=0.23.0",
  "gitpython>=3.1.43",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/vikky781/codebase-cartographer"
Repository = "https://github.com/vikky781/codebase-cartographer"
Issues = "https://github.com/vikky781/codebase-cartographer/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.scripts]
cartographer = "codebase_cartographer.cli:main"
cartographer-mcp = "codebase_cartographer.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
